--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,2 @@
-<button type="button" class="btn btn-primary">Primary</button>
-<p>
-  <i class="fa-solid fa-gauge"></i>
-</p>
+<app-menu></app-menu>
+<app-profile></app-profile>
