add service and some modification

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -25,7 +25,8 @@
             <em class="fas fa-sign-in-alt">&nbsp;Create Account</em>
         </button>
         <div>
-        Already have an account?&nbsp;<button type="button" class="btn btn-link">Login</button>
+        Already have an account?&nbsp;
+        <button (click)="login()" type="button" class="btn btn-link">Login</button>
     </div>
       </div>
 
