--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
+<div class="container container-fluid mt-1">
 <app-menu></app-menu>
-<app-profile></app-profile>
+<div class="card mt-3">
+<router-outlet></router-outlet>
+</div>
+</div>
