--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,24 +1,32 @@
 <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" [routerLink]="'/'+role">My Bank</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">My Bank</a>
+          <li class="nav-item" >
+            <a class="nav-link active" aria-current="page" [routerLink]="'user/dashboard'">Dashboard</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Dashboard</a>
+            <a class="nav-link" [routerLink]="'user/profile'">My Profil</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">My Transactions</a>
+          <li class="nav-item" *ngIf="!isAdmin">
+            <a class="nav-link" [routerLink]="'user/new-Transaction'">My Transactions</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link disabled">My Contact List</a>
+          <li class="nav-item" *ngIf="!isAdmin">
+            <a class="nav-link" [routerLink]="'user/my-ContactList'">My Contact List</a>
+          </li>
+          <li class="nav-item" *ngIf="isAdmin">
+            <a class="nav-link" [routerLink]="'admin/users'">manage users</a>
           </li>
         </ul>
       </div>
+    </div>
+    <div class="d-flex align-items-center">
+   <a [routerLink]="'/'+role+'/profile'">
+    <em class="fas fa-user"></em>Hamza Houri
+   </a>
     </div>
   </nav>
