--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -13,7 +13,8 @@
             <em class="fas fa-sign-in-alt">&nbsp;Sign-in</em>
         </button>
         <div>
-        Don't have an account?&nbsp;<button type="button" class="btn btn-link">Register</button>
+        Don't have an account?&nbsp;
+        <button (click)="register()" type="button" class="btn btn-link">Register</button>
     </div>
       </div>
 
